k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-gate
  labels:
    app: admin-gate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-gate
  template:
    metadata:
      labels:
        app: admin-gate
      annotations:
        app.kubernetes.io/restarted-at: "2026-07-01T21:38:53+02:00"
    spec:
      containers:
        - name: admin-gate
          image: ghcr.io/tenshi-lab-kube/admin-gate:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
